--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3 style="text-align:center;" class="section-title">{{ site.data.conference.title }}
             </h3>
 
-            <p align="justify"><b>OVERVIEW:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The workshop will be held on Nov. 18th 2024 in Washington, D.C., USA and aims to bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging and technology research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
+            <p align="justify"><b>OVERVIEW:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The workshop will be held on {{ site.data.conference.dates }} in Washington, D.C., USA and aims to bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging and technology research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
             
             <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. The wireless and mobile computing research community has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant challenges exist</A> in the deployment of wireless and mobile sensing and computing technologies including AI-enabled and enhanced technologies intended to be used by older adults, caregivers, and clinicians. These <A HREF="https://www.nia.nih.gov/news/new-report-emerging-technologies-help-older-americans-maintain-independence">challenges include</A> improving accuracy, usability, access, and ensuring privacy and security while also decreasing bias and user burden. </p>
             
@@ -42,7 +42,9 @@
 						{% endfor %}
 			{% endif %}
 
-            <p id="listing" align="justify"><b>REGISTERING and ATTENDING:</b> 
+            <p id="listing" align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/">Capital Hilton</A> in Washington D.C. </p>
+
+            <p id="listing" align="justify"><b>REGISTERING and ATTENDING:</b> Attendees will have the option to register for either the main conference and the workshop, or only the workshop. More details will be available when registration opens for the main conference. </p>
 
             <p align="justify"><b>IMPORTANT DATES:</b><br/>
                 Research Paper submission: {{ site.data.dates.submission }}<br/>
