--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 						{% endfor %}
 			{% endif %}
 
-            <p id="listing" align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/">Capital Hilton</A> in Washington D.C. </p>
+            <p align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/">Capital Hilton</A> in Washington D.C. </p>
 
-            <p id="listing" align="justify"><b>REGISTERING and ATTENDING:</b> Attendees will have the option to register for either the main conference and the workshop, or only the workshop. More details will be available when registration opens for the main conference. </p>
+            <p align="justify"><b>REGISTERING and ATTENDING:</b> Attendees will have the option to register for either the main conference and the workshop, or only the workshop. More details will be available when registration opens for the main conference. </p>
 
-            <p align="justify"><b>IMPORTANT DATES:</b><br/>
-                Research Paper submission: {{ site.data.dates.submission }}<br/>
-                Research Paper acceptance notification: {{ site.data.dates.notification }}<br/>
-                Research Paper camera ready: {{ site.data.dates.camera_ready }}<br/>
-                Demo &amp; Poster abstract submission: {{ site.data.dates.poster_demo_submission }}<br/>
-                Demo &amp; Poster notification: {{ site.data.dates.poster_demo_notification }}<br/>
-                Workshop: {{ site.data.conference.dates }}
+            <p id="listing" align="justify"><b>IMPORTANT DATES:</b><br/>
+                <li>Research Paper submission: {{ site.data.dates.submission }}</li>
+                <li>Research Paper acceptance notification: {{ site.data.dates.notification }}</li>
+                <li>Research Paper camera ready: {{ site.data.dates.camera_ready }}</li>
+                <li>Demo &amp; Poster abstract submission: {{ site.data.dates.poster_demo_submission }}</li>
+                <li>Demo &amp; Poster notification: {{ site.data.dates.poster_demo_notification }}</li>
+                <li>Workshop: {{ site.data.conference.dates }}</li>
             </p>
 
         </div><!-- /.container -->
