--- a/cfp.html
+++ b/cfp.html
@@ -27,11 +27,11 @@
 
         <p align="justify">The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
 
-        <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. The wireless and mobile computing research community has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant technology development challenges abound including improving accuracy, usability, access, and reliable guarantee for privacy, and security while decreasing bias, user burden. </p>
+        <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. The wireless and mobile computing research community has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant technology development challenges exist including improving accuracy, usability, access, and reliable guarantee for privacy, and security while decreasing bias, user burden. </p>
 
-        <p align="justify">The workshop is seeking original contributions in the form of research papers, extended abstracts, and demo proposals that describe technologies and approaches that can be brought to bear on challenges in the AgeTech space including but not limited to technologies for:</p>
+        <p align="justify">The workshop is seeking original research papers, extended abstracts, and demo proposals that describe technologies and approaches that can be brought to bear on challenges in the AgeTech space including but not limited to technologies for:</p>
 
-        <ulx class="list-arrow-right" style="font-weight: 100;"></ulx>
+        <ulx class="list-arrow-right" style="font-weight: 100;">
         <li> supporting activities of daily living and independent living</li>
         <li> monitoring physical functioning and personal mobility</li>
         <li> assessing and augmenting cognitive functioning </li>
@@ -39,21 +39,21 @@
         <li> supporting transportation use including driving safety and use of public transit</li>
         <li> supporting care including remote health monitoring and adaptive interventions   </li>
         </ulx>
-
+        
         <p align="justify">Extended abstracts will be presentation as posters. Demo proposals should describe an underlying technology and how it will be demonstrated. Extended abstracts and demo proposals are both limited to one page of text and will be posted on the workshop website. Research papers should be between four and eight pages all-inclusive (references, figures, etc.) and must contain original material not previously published or currently submitted for consideration elsewhere. Research papers will be accepted for oral or poster presentation and will be included in the workshop proceedings archived in the ACM Digital Library. </p>
 
-        <p align="justify">All submission must be prepared in the <A HREF="https://www.acm.org/publications/proceedings-template">ACM conference proceedings format</A> and submitted through the HotCRP conference management system (url TBA). Papers must include author names and affiliations for single-blind peer reviewing. All submissions will be judged by their technical merit and relevance to the workshop based on reviews by the Technical Program Committee. At least one author of each accepted contribution is expected to register for, attend and present at the workshop. </p>
+        <p align="justify">All submission must be prepared in the <A HREF="https://www.acm.org/publications/proceedings-template">ACM conference proceedings format</A> and submitted through the HotCRP conference management system (submission url TBA). Papers must include author names and affiliations for single-blind peer reviewing. All submissions will be judged by their technical merit and relevance to the workshop based on reviews by the Technical Program Committee. At least one author of each accepted contribution is expected to register for, attend and present at the workshop. </p>
         
         <p align="justify"><b>IMPORTANT DATES:</b><br/>
             Research Paper submission: {{ site.data.dates.submission }}<br/>
             Research Paper acceptance notification: {{ site.data.dates.notification }}<br/>
+            Research Paper camera ready: {{ site.data.dates.camera_ready }}<br/>
             Demo &amp; Poster abstract submission: {{ site.data.dates.poster_demo_submission }}<br/>
             Demo &amp; Poster notification: {{ site.data.dates.poster_demo_notification }}<br/>
-            Camera ready: {{ site.data.dates.camera_ready }}<br/>
             Workshop: {{ site.data.conference.dates }}
         </p>
 
-        <p align="justify">If you have any other questions regarding {{ site.data.conference.short_title }}, please contact us at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</u></a>.
+        <p align="justify">For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
     </div>
 </section>
 
