--- a/committee.html
+++ b/committee.html
@@ -27,7 +27,7 @@
 
         <h3>Steering Committee</h3>
         {% for m in site.data.chairs.steering %}
-        <A HREF="{{ m.link }}"></A>{{ m.firstname }} {{ m.lastname }}</A>, {{ m.institution }}<br/>
+        <A HREF="{{ m.link }}">{{ m.firstname }} {{ m.lastname }}</A>, {{ m.institution }}<br/>
         {% endfor %}
 
         <h3>Technical Program Committee</h3>
