--- a/committee.html
+++ b/committee.html
@@ -22,12 +22,12 @@
 
         <h3>Workshop Co-chairs</h3>
         {% for chair in site.data.chairs.general_chairs %}
-        <A HREF="{{ chair.link }}">{{ chair.firstname }} {{ chair.lastname }}</A>, {{ chair.institution }}<br/>
+        <A HREF="{{ chair.link }}" target="_blank">{{ chair.firstname }} {{ chair.lastname }}</A>, {{ chair.institution }}<br/>
         {% endfor %}
 
         <h3>Steering Committee</h3>
         {% for m in site.data.chairs.steering %}
-        <A HREF="{{ m.link }}">{{ m.firstname }} {{ m.lastname }}</A>, {{ m.institution }}<br/>
+        <A HREF="{{ m.link }}" target="_blank">{{ m.firstname }} {{ m.lastname }}</A>, {{ m.institution }}<br/>
         {% endfor %}
 
         <h3>Technical Program Committee</h3>
