--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li>Workshop: {{ site.data.conference.dates }}</li>
             </p>
 
-			{% if site.data.keynotes.size > 0 %}
+			{% if site.data.sponsors.all_sponsors > 0 %}
             <p align="justify"><b>SPONSORS:</b><br/>
 			    {% for s in site.data.sponsors.all_sponsors %}
                     <A HREF="s.link" TARGET="_blank"><img src='{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
