--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@
                 <li>Workshop: {{ site.data.conference.dates }}</li>
             </p>
 
-			{% if site.data.sponsors.all_sponsors > 0 %}
             <p align="justify"><b>SPONSORS:</b><br/>
 			    {% for s in site.data.sponsors.all_sponsors %}
-                    <A HREF="s.link" TARGET="_blank"><img src='{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
+                    <A HREF="{{ s.link }}" TARGET="_blank"><img src='{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
 			    {% endfor %}
-			{% endif %}
 
 
             <p align="justify">For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
