--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 
             <p align="justify"><b>SPONSORS:</b><br/>
 			    {% for s in site.data.sponsors.all_sponsors %}
-                    <A HREF="{{ s.link }}" TARGET="_blank"><img src='{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
+                    <A HREF="img/logos/{{ s.link }}" TARGET="_blank"><img src='{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
 			    {% endfor %}
+            </p>
 
 
             <p align="justify">For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
