--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <p align="justify"><b>SPONSORS:</b><br/>
 			    {% for s in site.data.sponsors.all_sponsors %}
-                    <A HREF="img/logos/{{ s.link }}" TARGET="_blank"><img src='{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
+                    <A HREF="{{ s.link }}" TARGET="_blank"><img src='img/logos/{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
 			    {% endfor %}
             </p>
 
