--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 <li>Workshop: {{ site.data.conference.dates }}</li>
             </p>
 
-            <p align="justify"><b>SPONSORS:</b><br/>
+            <p align="justify"><b>SPONSORS:</b><br><br>
 			    {% for s in site.data.sponsors.all_sponsors %}
                     <A HREF="{{ s.link }}" TARGET="_blank"><img src='img/logos/{{ s.logo }}' style="width:120px;float:left;margin-right:2%;"></A>
 			    {% endfor %}
             </p>
 
 
-            <p align="justify">For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
+            <p align="justify"><b>CONTACT US:</b> For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
 
         </div><!-- /.container -->
     </section>
