--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <li>Workshop: {{ site.data.conference.dates }}</li>
             </p>
 
-            <p align="justify"><b>SPONSORS:</b>
+            <p align="justify"><b>SPONSORS:</b> 
 			    {% for s in site.data.sponsors.all_sponsors %}
-                    <A HREF="{{ s.link }}" TARGET="_blank"><img src='img/logos/{{ s.logo }}' style="width:120px;margin-right:2%;"></A>
+                    <A HREF="{{ s.link }}" TARGET="_blank"><img src='img/logos/{{ s.logo }}' style="width:120px;margin-right:5px;margin-left:5px;"></A>
 			    {% endfor %}
             </p>
 
