--- a/committee.html
+++ b/committee.html
@@ -22,18 +22,22 @@
 
         <h3>Workshop Co-chairs</h3>
         {% for chair in site.data.chairs.general_chairs %}
-            <img src='img/committees/{{ chair.lastname }}.jpg' style="width:120px;float:left;margin-right:5px;">
-            <p align='justify'>
-                <A HREF="{{ chair.link }}" target="_blank">{{ chair.firstname }} {{ chair.lastname }}</A><BR>
-                {{ chair.institution }}
-            </p>
+            <div class="clearfix">
+                <img src='img/committees/{{ chair.lastname }}.jpg' style="width:120px;float:left;margin-right:5px;">
+                <p align='justify'>
+                    <A HREF="{{ chair.link }}" target="_blank">{{ chair.firstname }} {{ chair.lastname }}</A><BR>
+                    {{ chair.institution }}
+                </p>
+            </div>
         {% endfor %}
 
         <h3>Steering Committee</h3>
         {% for m in site.data.chairs.steering %}
-        <img src='img/committees/{{ m.lastname }}.jpg' style="width:120px;float:left;margin-right:5px;">
-            <p align='justify'><A HREF="{{ m.link }}" target="_blank">{{ m.firstname }} {{ m.lastname }}</A><BR>
-            {{ m.institution }}</p>
+            <div class="clearfix">
+                <img src='img/committees/{{ m.lastname }}.jpg' style="width:120px;float:left;margin-right:5px;">
+                <p align='justify'><A HREF="{{ m.link }}" target="_blank">{{ m.firstname }} {{ m.lastname }}</A><BR>
+                {{ m.institution }}</p>
+            </div>
         {% endfor %}
 
         <h3>Technical Program Committee</h3>
