--- a/committee.html
+++ b/committee.html
@@ -45,7 +45,7 @@
         <h3>Technical Program Committee</h3>
         <P>
         {% for r in site.data.tpc %}
-                {{ m.firstname }} {{ m.lastname }}, {{ m.institution }}<BR>
+                {{ r.firstname }} {{ r.lastname }}, {{ r.institution }}<BR>
         {% endfor %}
         </P>
 
