--- a/cfp.html
+++ b/cfp.html
@@ -66,12 +66,12 @@
             
             <LI><b>Research papers</B> should be between four and eight pages all-inclusive (references, figures, etc.) and must contain original material not previously published or currently submitted for consideration elsewhere. We encourage the submission of research papers that present novel technology solutions (including early and in-progress work), as well as vision/position papers describing novel challenges and gaps.  Research papers will be accepted for oral or poster presentation and will be included in the workshop proceedings archived in the ACM Digital Library. </li>
             
-            <LI><B>Extended Abstracts:</B> Extended abstracts are limited to one page plus references and may describe early work or work in progress. Extended abstracts will be presentation as posters and made available on the workshop website.</li>
+            <LI><B>Extended abstracts</B> are limited to one page plus references and may describe early work or work in progress. Extended abstracts will be presentation as posters and made available on the workshop website.</li>
 
-            <LI><B>Demo Proposals:</B> Demo proposals should describe a technology or system and how it will be demonstrated at the workshop. Demo proposals are limited to one page plus references.</li>
+            <LI><B>Demo proposals:</B> should describe a technology or system and how it will be demonstrated at the workshop. Demo proposals are limited to one page plus references.</li>
         </p>
 
-        <p id="listing" align="justify"><B>SUBMISSION PREPARATION:</B> All submissions should be consistent with the ACM conference proceedings format. You are encouraged to use the <A HREF="https://www.acm.org/publications/proceedings-template">ACM conference proceedings templates</A> to prepare your submission. Latex users, please use ​\documentclass[sigconf,10pt]{acmart}​. If formatting your submission without using a template, please follow these requirements:
+        <p id="listing" align="justify"><B>SUBMISSION PREPARATION:</B> All submissions should be consistent with the ACM conference proceedings format. You are encouraged to use the <A HREF="https://www.acm.org/publications/proceedings-template" target="_blank">ACM conference proceedings templates</A> to prepare your submission. Latex users, please use ​\documentclass[sigconf,10pt]{acmart}​. If formatting your submission without using a template, please follow these requirements:
                 <LI>The font size must be no smaller than 10 points.</LI>
                 <LI>Double column format must be used with each column having dimensions 9.25 inches x 3.33 inches, a space of 0.33 inches between the two columns, and with no more than 55 lines of text per column.</LI>
                 <LI>US letter-sized paper must be used (8.5 inches by 11 inches).</LI>
