--- a/cfp.html
+++ b/cfp.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <p align="justify">The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
+        <p align="justify">The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom {{ site.data.conference.year }})</A>. The workshop will be held on {{ site.data.conference.dates }} in Washington, D.C., USA and aims bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
 
         <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. The wireless and mobile computing research community has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant technology development challenges exist. </p>
 
@@ -73,7 +73,7 @@
         </p>
 
         <p id="listing" align="justify"><B>SUBMISSION PREPARATION:</B> All submissions should be consistent with the ACM conference proceedings format. You are encouraged to use the <A HREF="https://www.acm.org/publications/proceedings-template" target="_blank">ACM conference proceedings templates</A> to prepare your submission. Latex users, please use ​\documentclass[sigconf,10pt]{acmart}​. If formatting your submission without using a template, please follow these requirements:</p>
-        
+
         <p id="listing" align="justify">
                 <LI>The font size must be no smaller than 10 points.</LI>
                 <LI>Double column format must be used with each column having dimensions 9.25 inches x 3.33 inches, a space of 0.33 inches between the two columns, and with no more than 55 lines of text per column.</LI>
