--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <h3 style="text-align:center;" class="section-title">{{ site.data.conference.title }}
             </h3>
 
-            <p align="justify"><b>OVERVIEW:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom {{ site.data.conference.year }})</A>. The workshop will be held on {{ site.data.conference.dates }} in Washington, D.C., USA and aims to bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging and technology research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
+            <p align="justify"><b>OVERVIEW:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/" target="_blank">30th Annual International Conference on Mobile Computing and Networking (MobiCom {{ site.data.conference.year }})</A>. The workshop will be held on {{ site.data.conference.dates }} in Washington, D.C., USA and aims to bring together academic researchers, industry leaders, and government partners to present research and discuss challenges and opportunities at the intersection of wireless and mobile computing, AI and data analytics, and technologies for supporting aging. The workshop will include keynote presentations from aging and technology research experts, contributed paper presentations and demos, panel discussions, and presentations from research funders and commercialization partners. </p>
             
-            <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. Wireless and mobile computing has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant challenges exist</A> in the deployment of wireless and mobile sensing and computing technologies including AI-enabled and enhanced technologies intended to be used by older adults, caregivers, and clinicians. These <A HREF="https://www.nia.nih.gov/news/new-report-emerging-technologies-help-older-americans-maintain-independence">challenges include</A> improving accuracy, usability and access, ensuring privacy and security, and decreasing bias and user burden.</p>
+            <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. Wireless and mobile computing has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant challenges exist</A> in the deployment of wireless and mobile sensing and computing technologies including AI-enabled and enhanced technologies intended to be used by older adults, caregivers, and clinicians. These <A HREF="https://www.nia.nih.gov/news/new-report-emerging-technologies-help-older-americans-maintain-independence" target="_blank">challenges include</A> improving accuracy, usability and access, ensuring privacy and security, and decreasing bias and user burden.</p>
             
 
             <p id="listing" align="justify"><b>PROGRAM OUTLINE:</b>The program of {{ site.data.conference.short_title }} {{ site.data.conference.year }} will include the follow sessions (see <A HREF="cfp.html"> the Call for Papers</A> for details on contributing research papers, posters, and demos).</p>
@@ -35,16 +35,25 @@
             <li>Contributed demos and posters</li>
             <br>
 
-			{% if site.data.keynotes.size > 0 %}
-            <p><b>Keynote Speakers:</b><br/>
-						{% for keynote in site.data.keynotes %}
-							{{ keynote.academic_title }} {{ keynote.firstname }} {{ keynote.lastname }}, {{ keynote.affiliation }}
+            <p><b>SPEAKERS:</b> We are excited to announce an initial slate of speakers. Please check back for updates as the workshop program is still growing!  </P>
+			{% if site.data.speakers.size > 0 %}
+            <div style="gap: 20px; margin-bottom:10px;display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));">
+                        {% assign speakers = site.data.speakers | sort: 'lastname' %}
+						{% for person in speakers %} 
+                            <div style="width:120px;">
+                            <A href="{{ person.link }}" target="_blank"><img src='img/speakers/{{ person.lastname }}.jpg' style="width:120px;border-radius: 50%;">
+                                <div style="text-align: center;font-size: 11px;">
+                                   <B>{{ person.firstname }} {{ person.lastname }}</B></A><br>  
+                                   {{ person.affiliation }}
+                                </div> 
+                            </div>
 						{% endfor %}
 			{% endif %}
+            </div>
 
-            <p align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/">Capital Hilton</A> in Washington D.C. </p>
+            <p align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/" target="_blank">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/" target="_blank">Capital Hilton</A> in Washington D.C. Please use <A href="https://book.passkey.com/go/ACMMobicon2024" target="_blank">this link</A> for hotel reservations. See the MobiCom website for additional <A href="https://www.sigmobile.org/mobicom/2024/venue.html" target="_blank">venue information</A>.</p>
 
-            <p align="justify"><b>REGISTERING and ATTENDING:</b> Attendees will have the option to register for either the main conference and the workshop, or only the workshop. More details will be available when registration opens for the main conference. </p>
+            <p align="justify"><b>REGISTERING and ATTENDING:</b> Attendees and workshop participants have the option to register for either the main conference and the workshop, or only the workshop. Please see the <A href="https://www.sigmobile.org/mobicom/2024/registration.html" target="_blank">MobiCom 2024 Registration page</A> for registration details. Early bird rates are available until October 21st.</p>
 
             <p id="listing" align="justify"><b>IMPORTANT DATES:</b><br/>
                 <li>Research Paper submission: {{ site.data.dates.submission }}</li>
@@ -62,7 +71,7 @@
             </p>
 
 
-            <p align="justify"><b>CONTACT US:</b> For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
+            <p align="left"><b>CONTACT US:</b> For questions regarding {{ site.data.conference.short_title }}, please contact the workshop organizers at <a href="mailto:mobicom4agetech@gmail.com"><u>mobicom4agetech@gmail.com</a>.</p>
 
         </div><!-- /.container -->
     </section>
