add draft program

--- a/committee.html
+++ b/committee.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body data-spy="scroll" data-target="#site-nav">
-{% include header.html %}
+{% include header-small.html %}
 
 <section id="organization" class="section faq" style="display: block;">
     <div class="container">
