adding venue details

--- a/program.html
+++ b/program.html
@@ -21,6 +21,9 @@
         <div class="container">
     
             <h3>Program</h3>
+            <p>
+            Details for the MobiCom4AgeTech workshop program are provided below. The full MobiCom workshop and conference program is available <A href="https://www.sigmobile.org/mobicom/2024/program.html" target="_blank">here</a>.
+            </p>
 
             <table class="table table-hover">
                 <thead class="thead-dark"><th>Start</th><th>End</th><th>Session</th></thead>
