adding venue details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p align="justify">By 2060, it is estimated that nearly a quarter of the US population (over 95 million people) will be over the age of 65 and most will have multiple chronic conditions including cognitive impairment or dementia. Wireless and mobile computing has the potential to play a central role in the development of monitoring, assistive and interventional technologies for supporting healthy aging, an emerging area referred to as AgeTech. However, significant challenges exist</A> in the deployment of wireless and mobile sensing and computing technologies including AI-enabled and enhanced technologies intended to be used by older adults, caregivers, and clinicians. These <A HREF="https://www.nia.nih.gov/news/new-report-emerging-technologies-help-older-americans-maintain-independence" target="_blank">challenges include</A> improving accuracy, usability and access, ensuring privacy and security, and decreasing bias and user burden.</p>
             
 
-            <p id="listing" align="justify"><b>PROGRAM OUTLINE:</b>The program of {{ site.data.conference.short_title }} {{ site.data.conference.year }} will include the follow sessions (see <A HREF="cfp.html"> the Call for Papers</A> for details on contributing research papers, posters, and demos).</p>
+            <p id="listing" align="justify"><b>PROGRAM OUTLINE:</b>The program of {{ site.data.conference.short_title }} {{ site.data.conference.year }} will include the follow sessions (see <A HREF="cfp.html"> the Call for Papers</A> for details on contributing research papers, posters, and demos). See the <A href="program.html">full program</A> for details.</p>
 <!--            TODO: Update this section-->
             <li>Keynote speeches from experts in aging and AgeTech</li>
             <li>Contributed research paper presentations</li>
@@ -51,16 +51,16 @@
 			{% endif %}
             </div>
 
-            <p align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/" target="_blank">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/" target="_blank">Capital Hilton</A> in Washington D.C. Please use <A href="https://book.passkey.com/go/ACMMobicon2024" target="_blank">this link</A> for hotel reservations. See the MobiCom website for additional <A href="https://www.sigmobile.org/mobicom/2024/venue.html" target="_blank">venue information</A>.</p>
+            <p align="justify"><b>VENUE:</b> The 1st ACM Workshop on Wireless and Mobile Computing for AgeTech (MobiCom4AgeTech) will be co-located with the <A HREF="https://www.sigmobile.org/mobicom/2024/" target="_blank">30th Annual International Conference on Mobile Computing and Networking (MobiCom 2024)</A>. The conference and workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/" target="_blank">Capital Hilton</A> in Washington D.C. Please use <A href="https://book.passkey.com/go/ACMMobicon2024" target="_blank">this link</A> for hotel reservations. See the <A href="venue.html">workshop venue page</A> for session location details.</p>
 
             <p align="justify"><b>REGISTERING and ATTENDING:</b> Attendees and workshop participants have the option to register for either the main conference and the workshop, or only the workshop. Please see the <A href="https://www.sigmobile.org/mobicom/2024/registration.html" target="_blank">MobiCom 2024 Registration page</A> for registration details. Early bird rates are available until October 21st.</p>
 
             <p id="listing" align="justify"><b>IMPORTANT DATES:</b><br/>
-                <li>Research Paper submission: {{ site.data.dates.submission }}</li>
+                <!--<li>Research Paper submission: {{ site.data.dates.submission }}</li>
                 <li>Research Paper acceptance notification: {{ site.data.dates.notification }}</li>
                 <li>Research Paper camera ready: {{ site.data.dates.camera_ready }}</li>
                 <li>Demo &amp; Poster abstract submission: {{ site.data.dates.poster_demo_submission }}</li>
-                <li>Demo &amp; Poster notification: {{ site.data.dates.poster_demo_notification }}</li>
+                <li>Demo &amp; Poster notification: {{ site.data.dates.poster_demo_notification }}</li>-->
                 <li>Workshop: {{ site.data.conference.dates }}</li>
             </p>
 
