adding venue details

--- a/program.html
+++ b/program.html
@@ -22,7 +22,7 @@
     
             <h3>Program</h3>
             <p>
-            Details for the MobiCom4AgeTech workshop program are provided below. The full MobiCom workshop and conference program is available <A href="https://www.sigmobile.org/mobicom/2024/program.html" target="_blank">here</a>.
+            Details for the MobiCom4AgeTech workshop program are provided below. The MobiCom registration desk will open at 7:30am. Workshop attendees should stop by the MobiCom registration desk to obtain their badge before proceeding to the workshop room. All MobiCom4AgeTech sessions will take place in the Pan American Room. See the <A href="venue.html">venue</A> page for site details. The full MobiCom workshop and conference program is available <A href="https://www.sigmobile.org/mobicom/2024/program.html" target="_blank">here</a>.
             </p>
 
             <table class="table table-hover">
