--- a/venue.html
+++ b/venue.html
@@ -22,8 +22,8 @@
     
             <h3>Venue Information</h3>
 
-            <P><B>Workshop Location:</B> The workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/" target="_blank">Capitol Hilton</A> in Washington, DC, USA. The Capitol Hilton's street address is 
-                <A HREF="https://maps.app.goo.gl/xZSYC8AZPdphRFT99" target="_blank">1001 16th St NW, Washington, DC.</A> All MobiCom4AgeTech sessions will take place in the Capitol Hilton's Pan American room, located on the second floor of the hotel. The floor plan is shown below.<BR><BR>
+            <P><B>Workshop Location:</B> The workshop will be held at the <A HREF="https://www.hilton.com/en/hotels/dcashhh-capital-hilton/" target="_blank">Capital Hilton</A> in Washington, DC, USA. The Capital Hilton's street address is 
+                <A HREF="https://maps.app.goo.gl/xZSYC8AZPdphRFT99" target="_blank">1001 16th St NW, Washington, DC.</A> All MobiCom4AgeTech sessions will take place in the Capital Hilton's Pan American room, located on the second floor of the hotel. The floor plan is shown below.<BR><BR>
                 
                 <div class="text-center">
 
